SERVER-49249 initial sync skips single-phase index build if there is an index build already in progress